# fkflow

./: .gitignore  LICENSE  README.md
chiflow/: README.md  flow_train.py  preprocess_create_splits.sh  preprocess_extract_rxn_core.sh  preprocessing.py  preprocessing_lite.py  preprocessing_lite.sh  preprocessing_lite_test.sh  pyproject.toml
chiflow/configs/: eval.yaml  train.yaml
chiflow/configs/data/: rdb7.yaml
chiflow/configs/experiment/: gotennet_u0.yaml
chiflow/configs/model/: flow.yaml  flow_w_control.yaml  mnist.yaml
chiflow/configs/paths/: default.yaml
chiflow/data/RDB7/raw_data/: rdb7_full.csv
chiflow/data_processing/: create_rdb7_geometries_file.py
chiflow/data_processing/utils/: reaction_utils.py
chiflow/flow_matching/: chirality_metrics.py  flow_module.py  resampling.py  utils.py
chiflow/gotennet/: eval.py  train.py
chiflow/gotennet/data/: datamodule.py
chiflow/gotennet/data/components/: rdb7.py  utils.py
chiflow/gotennet/models/: gotennet_module.py
chiflow/gotennet/models/components/: callbacks.py  ops.py
chiflow/gotennet/models/representation/: gotennet_rtsp.py
chiflow/gotennet/models/tasks/: MD17Task.py  Molecule3DTask.py  QM9Task.py  Task.py  __init__.py
chiflow/utils/: chem.py  chirality_utils.py  datasets.py  parse_xyz.py
hypercube/: README.md  benchmark.py  core.py  hypercube_exp1.sh  hypercube_exp2.sh  hypercube_exp3.sh  hypercube_exp_run_all.sh  hypercube_plots.ipynb  inference.py  pyproject.toml  train.py  train_models.sh  utils.py
synthetic/: README.md  environment.yml  setup.py
synthetic/guided_flow/backbone/: mlp.py  transformer.py  wrapper.py
synthetic/guided_flow/config/: guidance_training.py  sampling.py  training.py
synthetic/guided_flow/dataset/: objective.py
synthetic/guided_flow/distributions/: base.py  circle.py  moon.py  s_curve.py
synthetic/guided_flow/flow/: conditional_flow_matching.py  optimal_transport.py
synthetic/guided_flow/guidance/: contrastive_energy.py  gradient_guidance.py
synthetic/guided_flow/train/: cfm.py  value_ceg.py  value_guidance_matching.py
synthetic/guided_flow/utils/: metrics.py  misc.py  visualize.py
synthetic/notebooks/: fig.ipynb  fk_steering.py  vals.ipynb
synthetic/script/: train_cfm.sh  train_cfm_ot.sh
