[project]
name = "chiflow"
version = "0.1.0"
description = "Flow Matching with FK Steering for Chemical Reaction Transition State Generation"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "torch-geometric>=2.6.1",
    "torchdiffeq>=0.2.5",
    "setuptools>=70.2.0",
    "torch-sparse>=0.6.18",
    "torch-cluster>=1.6.3",
    "torch-spline-conv>=1.2.2",
    "pandas>=2.2.3",
    "rdkit>=2024.9.6",
    "lightning>=2.5.0.post0",
    "hydra-core>=1.3.2",
    "rootutils>=1.0.7",
    "matplotlib>=3.10.1",
    "wandb>=0.19.8",
    "torch-scatter>=2.1.2",
    "ase>=3.24.0",
    "einops>=0.8.1",
    "rich>=13.9.4",
    "ipykernel>=6.29.5",
    "numpy==1.26.4",
    "etflow>=0.1.2",
    "plotly>=6.1.2",
    "nbformat>=5.10.4",
    "scipy>=1.10.0",
]

# Set the dependencies manually to include torch
[[tool.uv.dependency-metadata]]
name = "torch-scatter"
version = "2.1.2"
requires-dist = ["torch"]

[[tool.uv.dependency-metadata]]
name = "torch-cluster"
version = "1.6.3"
requires-dist = ["torch", "scipy"]

[[tool.uv.dependency-metadata]]
name = "torch-sparse"
version = "0.6.18"
requires-dist = ["torch", "scipy"]

[[tool.uv.dependency-metadata]]
name = "torch-spline-conv"
version = "1.2.2"
requires-dist = ["torch"]



[tool.uv.sources]
torch = [
    { index = "pytorchcpu", marker = "sys_platform == 'darwin'"},
    { index = "pytorchcuda124", marker = "sys_platform == 'linux'"}
    ]
torchvision = [
    { index = "pytorchcpu", marker = "sys_platform == 'darwin'"},
    { index = "pytorchcuda124", marker = "sys_platform == 'linux'"}
    ]
torchaudio = [
    { index = "pytorchcpu", marker = "sys_platform == 'darwin'"},
    { index = "pytorchcuda124", marker = "sys_platform == 'linux'"}
    ]

[[tool.uv.index]]
name = "pytorchcpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorchcuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

